--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.bookmymeal">
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +10,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BookMyTable">
-        <activity android:name=".RestaurantProfileActivity"></activity>
+        <activity android:name=".RestaurantAddOffersActivity"></activity>
+        <activity android:name=".RestaurantOffersActivity" />
+        <activity android:name=".RestaurantAddFoodsActivity" />
+        <activity android:name=".RestaurantFoodsActivity" />
+        <activity android:name=".RestaurantProfileActivity" />
         <activity android:name=".RestaurantOwnerActivity" />
         <activity android:name=".ForgotPasswordActivity" />
         <activity android:name=".RegisterActivity" />
