--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.bookmymeal">
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BookMyTable">
-        <activity android:name=".RestaurantAddOffersActivity"></activity>
+        <activity android:name=".RestaurantRequestListActivity"></activity>
+        <activity android:name=".UserProfileActivity" />
+        <activity android:name=".AdminDashboardActivity" />
+        <activity android:name=".CustomerDashboardActivity" />
+        <activity android:name=".RestaurantAddOffersActivity" />
         <activity android:name=".RestaurantOffersActivity" />
         <activity android:name=".RestaurantAddFoodsActivity" />
         <activity android:name=".RestaurantFoodsActivity" />
