--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BookMyTable">
-        <activity android:name=".RestaurantRequestListActivity"></activity>
+        <activity android:name=".FaqListActivity"></activity>
+        <activity android:name=".RestaurantRegistrationActivity" />
+        <activity android:name=".RestaurantRequestListActivity" />
         <activity android:name=".UserProfileActivity" />
         <activity android:name=".AdminDashboardActivity" />
         <activity android:name=".CustomerDashboardActivity" />
